Fix wrapping

--- a/_sass/_misc.scss
+++ b/_sass/_misc.scss
@@ -75,6 +75,7 @@
 
 .maps-col-item {
   flex: 1 1 0;
+  padding-right: 5px;
 }
 
 .flex-right-align-item {
